server/userttubeot/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: ttubeot-user
  labels:
    app: user
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "worker"
      containers:
      - name: user
        image: tkdqja9573/ssafy-final-user:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
        resources:
          requests:
            cpu: "200m"
          limits:
            cpu: "400m"
