server/userttubeot/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: ttubeot-user
  labels:
    app: user
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: user
  type: ClusterIP
