server/userttubeot/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  namespace: ttubeot-user
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    acme.cert-manager.io/http01-ingress-class: "traefik"
spec:
  rules:
  - host: "ssafy.picel.net"
    http:
      paths:
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 8080
  tls:
  - hosts:
    - "ssafy.picel.net"
    secretName: letsencrypt-tls
